[gd_scene load_steps=3 format=3 uid="uid://bqeepnt67swuv"]

[ext_resource type="Script" uid="uid://c7my3k36ve2mn" path="res://ui_sync_children/ui.gd" id="1_sapvj"]
[ext_resource type="Texture2D" uid="uid://ck3wcr15rhu3q" path="res://icon.svg" id="2_b3jnw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sapvj")

[node name="Actual" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Responsive" type="HBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 411.0
offset_right = -98.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="a" type="TextureRect" parent="Responsive"]
modulate = Color(1, 0.7, 0.7, 1)
layout_mode = 2
texture = ExtResource("2_b3jnw")

[node name="b" type="TextureRect" parent="Responsive"]
layout_mode = 2
texture = ExtResource("2_b3jnw")

[node name="c" type="TextureRect" parent="Responsive"]
modulate = Color(1, 0.49, 0.49, 1)
layout_mode = 2
texture = ExtResource("2_b3jnw")

[node name="d" type="TextureRect" parent="Responsive"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_b3jnw")

[node name="AddButton" type="Button" parent="."]
layout_mode = 0
offset_left = 263.0
offset_top = 122.0
offset_right = 372.0
offset_bottom = 194.0
text = "add"

[node name="RemoveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 122.0
offset_right = 538.0
offset_bottom = 194.0
text = "remove"

[node name="ChangeOrderButton" type="Button" parent="."]
layout_mode = 0
offset_left = 597.0
offset_top = 122.0
offset_right = 711.0
offset_bottom = 194.0
text = "change_order
"

[node name="ChangePosition" type="Button" parent="."]
layout_mode = 0
offset_left = 786.0
offset_top = 122.0
offset_right = 900.0
offset_bottom = 194.0
text = "change_position"

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="ChangeOrderButton" to="." method="_on_change_order_button_pressed"]
[connection signal="pressed" from="ChangePosition" to="." method="_on_change_position_pressed"]
